Fix  top navbar wrap

--- a/css/style.css
+++ b/css/style.css
@@ -111,13 +111,23 @@ a {
 	left: 0;
 	z-index: 10;
 	
-	overflow: hidden;
-	height: 5rem;
+	min-width: 1230px;
+	white-space: nowrap;
 	width: 100%;
+	height: 5rem;
 	line-height: 5rem;
 	padding: 0 1.5rem;
 	
 	background-color: white;
+}
+
+nav {
+	display: inline-block;
+	width: calc(100% - 250px);
+}
+
+nav, .top-nav>div, .top-nav ul {
+	display: inline-block;
 }
 
 .top-nav li>a {
